dark mode error solved

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,7 +132,6 @@
     top: 10px;
     width: 100%;
     height: 100%;
-    background-color: black;
 }
 
 
@@ -140,5 +139,4 @@
 .index .indexMain .indexMainDiv1 {
     position: relative;
     top: 50px;
-    color: white;
 }
